# AnkerMake-PrusaSlicer-Release

./: .gitignore  README.md
AnkerStudio/src/: AnkerComFunction.cpp  AnkerComFunction.hpp  AnkerStudio.cpp  AnkerStudio_app_msvc.cpp  CMakeLists.txt
AnkerStudio/src/admesh/: stl.h  util.cpp
AnkerStudio/src/anker_net/Interface Files/: AnkerNetBase.h  AnkerNetModule.h
AnkerStudio/src/anker_net/business/mqttBusiness/: mqttprotocolbase.h
AnkerStudio/src/anker_plungin/Interface Files/: AnkerPlugin.hpp
AnkerStudio/src/avrdude/: CMakeLists.txt  README  arduino.c  avrdude-slic3r.conf  main.c  stk500.c  stk500v2.c  stk500v2_private.h  update.c
AnkerStudio/src/clipper/: CMakeLists.txt  clipper.cpp  clipper.hpp
AnkerStudio/src/exception_handle/: AnkerStackWalker.hpp
AnkerStudio/src/hints/: HintsToPot.cpp
AnkerStudio/src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
AnkerStudio/src/libslic3r/: AABBMesh.hpp  AABBTreeLines.hpp  AppConfig.cpp  AppConfig.hpp  ArcFitter.cpp  ArcFitter.hpp  Arrange.hpp  BoundingBox.hpp  Brim.cpp  Brim.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Color.hpp  Config.cpp  Config.hpp  CutSurface.cpp  CutUtils.cpp  CutUtils.hpp  Emboss.cpp  ExPolygon.cpp  ExPolygon.hpp  Exception.hpp  Extruder.cpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  ExtrusionRole.hpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeReader.cpp  GCodeReader.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  IntersectionPoints.cpp  IntersectionPoints.hpp  (+79 more)
AnkerStudio/src/libslic3r/Algorithm/: RegionExpansion.cpp  RegionExpansion.hpp
AnkerStudio/src/libslic3r/Arachne/: SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.hpp  WallToolPaths.cpp  WallToolPaths.hpp
AnkerStudio/src/libslic3r/Arachne/utils/: VoronoiUtils.cpp
AnkerStudio/src/libslic3r/CSGMesh/: CSGMesh.hpp
AnkerStudio/src/libslic3r/Execution/: ExecutionSeq.hpp
AnkerStudio/src/libslic3r/Fill/: Fill.cpp  FillBase.hpp  FillEnsuring.cpp  FillEnsuring.hpp  FillLine.cpp  FillRectilinear.cpp
AnkerStudio/src/libslic3r/Format/: 3mf.cpp  3mf.hpp  AMF.cpp  SL1.cpp  SL1_SVG.cpp  SLAArchiveReader.cpp  SLAArchiveReader.hpp  SLAArchiveWriter.cpp  SLAArchiveWriter.hpp  STEP.hpp  SVG.cpp  SVG.hpp  ZipperArchiveImport.cpp  ZipperArchiveImport.hpp  bbs_3mf.cpp  bbs_3mf.hpp  pwmx.cpp  pwmx.hpp
AnkerStudio/src/libslic3r/GCode/: AvoidCrossingPerimeters.cpp  AvoidCrossingPerimeters.hpp  ConflictChecker.cpp  ConflictChecker.hpp  CoolingBuffer.cpp  ExtrusionProcessor.hpp  GCodeProcessor.cpp  GCodeProcessor.hpp  PostProcessExt.hpp  PostProcessor.cpp  PostProcessor.hpp  ProcessCommand.hpp  SeamPlacer.cpp  ThumbnailData.cpp  ThumbnailData.hpp  Thumbnails.cpp  Thumbnails.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower.hpp
AnkerStudio/src/libslic3r/Geometry/: Circle.cpp  Circle.hpp  ConvexHull.hpp
AnkerStudio/src/libslic3r/Orientation/: AutoOrient.cpp  AutoOrient.hpp  OrientBase.cpp  OrientBase.hpp  OrientTriangleMesh.cpp  OrientTriangleMesh.hpp
AnkerStudio/src/libslic3r/SLA/: SupportTree.hpp
AnkerStudio/src/miniz/: CMakeLists.txt  miniz.cpp  miniz.h
AnkerStudio/src/occt_wrapper/: CMakeLists.txt
AnkerStudio/src/platform/msw/: AnkerStudio-gcodeviewer.rc.in  AnkerStudio.rc.in
AnkerStudio/src/platform/osx/: Info.plist.in
AnkerStudio/src/platform/unix/: AnkerGcodeviewer.desktop  AnkerStudio.desktop
AnkerStudio/src/qoi/: CMakeLists.txt  qoilib.c
AnkerStudio/src/semver/: CMakeLists.txt
AnkerStudio/src/slic3r/: CMakeLists.txt
AnkerStudio/src/slic3r/Config/: AnkerCommonConfig.hpp  AnkerGlobalConfig.hpp  Snapshot.cpp  Version.cpp  Version.hpp
AnkerStudio/src/slic3r/GUI/: 3DBed.cpp  3DScene.cpp  3DScene.hpp  AboutDialog.cpp  AnkerAdjustItemWidget.cpp  AnkerAdjustItemWidget.hpp  AnkerBtn.cpp  AnkerBtn.hpp  AnkerCfgTab.cpp  AnkerCfgTab.hpp  AnkerCheckBox.cpp  AnkerCheckBox.hpp  AnkerConfig.cpp  AnkerConfig.hpp  AnkerCustomEvent.cpp  AnkerCustomEvent.hpp  AnkerDevice.cpp  AnkerDevice.hpp  AnkerEasyPanel.cpp  AnkerEasyPanel.hpp  AnkerFloatingList.cpp  AnkerFloatingList.hpp  AnkerFunctionPanel.cpp  AnkerFunctionPanel.h  AnkerGCodeImportDialog.cpp  AnkerGCodeImportDialog.hpp  AnkerGcodePreviewSideBar.cpp  AnkerGcodePreviewSideBar.hpp  AnkerGcodePreviewToolBar.cpp  AnkerGcodePreviewToolBar.hpp  AnkerHint.cpp  AnkerHint.h  AnkerHyperlink.cpp  AnkerHyperlink.hpp  AnkerLineEdit.cpp  AnkerLineEdit.hpp  AnkerLoadingMask.cpp  AnkerLoadingMask.hpp  AnkerLoginDialog.cpp  AnkerLoginDialog.hpp  (+157 more)
AnkerStudio/src/slic3r/GUI/AnkerConfigDialog/: AnkerConfigDialog.cpp  AnkerConfigDialog.hpp
AnkerStudio/src/slic3r/GUI/AnkerNetModule/: AnkerNetDownloadDialog.cpp  AnkerNetDownloadDialog.h  AnkerNetModuleManager.cpp  AnkerNetModuleManager.h  BuryDefines.h  HttpTool.cpp  HttpTool.h
AnkerStudio/src/slic3r/GUI/Calibration/: CalibrationAbstractDialog.hpp  CalibrationMaxFlowrateDialog.cpp  CalibrationMaxFlowrateDialog.hpp  CalibrationPresAdvDialog.cpp  CalibrationPresAdvDialog.hpp  CalibrationRetractionDialog.cpp  CalibrationRetractionDialog.hpp  CalibrationTempDialog.cpp  CalibrationTempDialog.hpp  CalibrationVfaDialog.cpp  CalibrationVfaDialog.hpp  FlowCalibration.cpp  FlowCalibration.hpp
AnkerStudio/src/slic3r/GUI/Common/: AnkerBase.cpp  AnkerBase.hpp  AnkerBaseCtls.cpp  AnkerBaseCtls.h  AnkerBitmapCombox.cpp  AnkerBitmapCombox.hpp  AnkerBox.cpp  AnkerBox.hpp  (+77 more)
AnkerStudio/src/slic3r/Utils/: AppUpdater.cpp  AppUpdater.hpp  AstroBox.cpp  DataManger.cpp  DataManger.hpp  DataMangerUi.cpp  DataMangerUi.hpp  DeviceVersionUtil.cpp  DeviceVersionUtil.hpp  EmbossStyleManager.cpp  EmbossStyleManager.hpp  FixModelByWin10.cpp  GcodeInfo.cpp  GcodeInfo.hpp  Http.cpp  JsonHelp.cpp  JsonHelp.hpp  MacDarkMode.mm  OctoPrint.cpp  OctoPrint.hpp  PresetUpdater.cpp  PrintHost.cpp  PrintHost.hpp  Process.cpp  RaycastManager.cpp  Repetier.cpp  Serial.cpp  Singleton.hpp  StringHelper.cpp  StringHelper.hpp  UndoRedo.cpp  WinRegistry.cpp  WinRegistry.hpp  WxFontUtils.cpp  WxFontUtils.hpp  wxFileTool.cpp  wxFileTool.hpp
AnkerStudio/src/tcbspan/: README.md
(+285 files in other folders)
